# libcu

./: .gitignore  CMakeLists.txt  README.md  _build.cmd  build.cmd  build.sh  default.ps1  libcu.cmd  libcu.sln
src/: CMakeLists.full.txt  CMakeLists.txt  CMakeLists.work.txt  fileutils.sln  libcu.sln
src/include/: _dirent.h  _unistd.h  crtdefscu.h  ctypecu.h  cuda_runtimecu.h  direntcu.h  errnocu.h  falloc.h  fcntlcu.h  featurescu.h  grpcu.h  host_definescu.h  host_functions.h  limitscu.h  pwdcu.h  regexcu.h  sentinel-direntmsg.h  sentinel-fcntlmsg.h  sentinel-iomsg.h  sentinel-statmsg.h  sentinel-stdiomsg.h  sentinel-stdlibmsg.h  sentinel-timemsg.h  sentinel-unistdmsg.h  sentinel.h  setjmpcu.h  stdargcu.h  stdargcu_.h  stddefcu.h  stdiocu.h  stdiocu.last.h  stdlibcu.h  stringcu.h  timecu.h  unistdcu.h
src/include/bits/: _libcu_dirent.h  _libcu_stat.h  libcu_dirent.h  libcu_stat.h  libcu_stdio.h
src/include/ext/: alloc.h  bitvec.h  convert.h  global.h  utf.h  (+9 more)
src/jimtcl/: Libcu-JimTcl.Native.nuspec  jimsh.cu  jimtcl.vcxproj  jimtcl.vcxproj.filters
src/libcu/: Libcu.Native.nuspec  crtdefscu.cu  ctypecu.cu  cuda_runtime.cpp  direntcu.cu  errnocu.cu  fcntlcu.cu  fsystem.cu  fsystem.h  grpcu.cu  host_functions.cpp  libcu.cu  libcu.stdlib.cu  libcu.vcxproj  libcu.vcxproj.filters  program-device.cu  program.cu  program.full.cu  pwdcu.cu  regexcu.cu  sentinel-gpu.cu  sentinel-host.cpp  sentinel-msg.cpp  sentinel.cpp  setjmpcu.cu  stdiocu.cu  stdlibcu.cu  stringcu.cu  timecu.cu  unistdcu.cu
src/libcu.data/: libcu.data.native.nuspec  libcu.data.vcxproj
src/libcu.ext/: Core.cu.h  SysEx.cu  VSystem-map.cu  alloc.cu  allocmem0.cu  allocmem1.cu  benignAlloc.cu  bitvec.cu  convert.cu  global.cu  libcu.ext.cu  libcu.ext.native.nuspec  libcu.ext.vcxproj  libcu.ext.vcxproj.filters  libcu.extra.vcxproj.filters  libcu.sqlite.h  main.cu  main.more.cu  math.cu  mutex-gpu.cu  mutex-noop.cu  mutex-unix.c  mutex-unix.cpp  mutex-unix.cu  mutex-win.cpp  mutex-win.cu  mutex-win.cuh  mutex.cu  notify.cu  pager.cu  pcache.cu  pcache1.cu  pragma.cu  printf.cu  program.cu  random.cu  sentinel-vsystem.cpp  sentinel-vsystem.cu  sentinel-vsystem.h  status.cu  (+14 more)
src/libcu.ext.tests/: allTests.cpp  allocTest.cu  bitvecTest.cu  convertTest.cpp  convertTest.cu  globalTest.cu  libcu.ext.tests.cu  libcu.ext.tests.vcxproj  libcu.ext.tests.vcxproj.filters  mainTest.cu  mathTest.cu  mutexTest.cu  notifyTest.cu  pcache1Test.cu  pcacheTest.cu  printfTest.cu  program.cu  randomTest.cu  statusTest.cu  stdafx.cpp  utfTest.cu  utilTest.cu  vsystemTest.cu
src/libcu.extra/: RC.cu.h  SysEx+Random.cu  SysEx.cu.h  VSystem-gpu.cu  VSystem-unix.cu  VSystem-win.cu  VSystem.cu  VSystem.cu.h  extra.cu  journalVfile.cu  libcu.extra.cu  libcu.extra.native.nuspec  libcu.extra.native.targets  libcu.extra.vcxproj  memoryVfile.cu  program.cu  vfile.h
src/libcu.falloc/: falloc.cu  libcu.falloc.cu  libcu.falloc.native.nuspec  libcu.falloc.vcxproj  libcu.falloc.vcxproj.filters
src/libcu.fileutils/: dcat.cpp  dcat.cu  dcat.cuh  dcat.vcxproj  dcd.cuh  dcd.vcxproj  dchgrp.cuh  dchgrp.vcxproj  dchmod.cuh  dchmod.vcxproj  dchown.cpp  dchown.cu  dchown.cuh  dchown.vcxproj  dcmp.cuh  dcmp.vcxproj  dcp.cpp  dcp.cuh  dcp.vcxproj  dgrep.cu  dgrep.cuh  dgrep.vcxproj  dls.cuh  dls.vcxproj  dmkdir.cpp  dmkdir.cuh  dmkdir.vcxproj  dmore.cuh  dmore.vcxproj  dmv.cuh  dmv.vcxproj  dpwd.cuh  dpwd.vcxproj  drm.cpp  drm.cu  drm.cuh  drm.vcxproj  drmdir.cpp  drmdir.cu  drmdir.cuh  (+10 more)
src/libcu.jimtcl/: Init.cu  Jim+Aio.cu  Jim+Array.cu  Jim+Clock.cu  Jim+EventLoop.cu  Jim+Exec.cu  Jim+File.cu  Jim+Format.cu  Jim+Gpu.cu  Jim+History.cu  Jim+Interactive.cu  Jim+Load.cu  Jim+Namespace.cu  Jim+Pack.cu  Jim+Package.cu  Jim+Readdir.cu  Jim+Regexp.cu  Jim+Subcmd.cu  Jim+Subcmd.h  Jim+TclPrefix.cu  Jim+Win32.cu  Jim+Win32compat.h  Jim.cu  Jim.h  JimEx.cu  JimEx.h  Libcu.JimTcl.Native.nuspec  Libcu.Jimtcl.Native.targets  RTcl.cu  Utf8.cu  Utf8.h  jim-aio.cu  jim-array.cu  jim-autoconf.h  jim-clock.cu  jim-eventloop.cu  jim-exec.cu  jim-file.cu  jim-format.cu  jim-gpu.cu  (+19 more)
src/libcu.sqlite/: btree.h  keywordhash.h  libcu.h  libcu.sqlite.native.nuspec  libcu.sqlite.native.targets  libcu.sqlite.vcxproj  libcu.sqlite.vcxproj.filters  libcuInt.h  pager.c  pager.h  pcache.h  pcache1.c  program.cu  sqlite3.h  sqliteInt.h  vdbe.h  wal.h
src/libcu.tests/: allTest.cu  allTests.cpp  crtdefsTest.cpp  crtdefsTest.cu  ctypeTest.cpp  ctypeTest.cu  direntTest.cpp  direntTest.cu  errnoTest.cpp  errnoTest.cu  fallocTest.cpp  fallocTest.cu  fcntlTest.cpp  fcntlTest.cu  fsystemTest.cpp  fsystemTest.cu  grpTest.cpp  grpTest.cu  libcu.tests.cu  libcu.tests.vcxproj  libcu.tests.vcxproj.filters  program.cu  pwdTest.cpp  pwdTest.cu  regexTest.cpp  regexTest.cu  sentinelTest.cpp  sentinelTest.cu  setjmpTest.cpp  setjmpTest.cu  stdafx.cpp  stdafx.h  stdargTest.cpp  stdargTest.cu  stddefTest.cpp  stddefTest.cu  stdioTest.cpp  stdioTest.cu  stdlibTest.cpp  stdlibTest.cu  (+6 more)
src/libcu.tinytcl/: Libcu.TinyTcl.Native.nuspec  Libcu.TinyTcl.Native.targets  RTcl.cu  Tcl+Alloc.cu  Tcl+Assem.cu  Tcl+Basic.cu  Tcl+CmdAH.cu  Tcl+CmdIL.cu  Tcl+CmdMZ.cu  Tcl+Expr.cu  Tcl+Get.cu  Tcl+Glob.cu  Tcl+Gpu.h  Tcl+GpuAZ.cu  Tcl+GpuEnv.cu  Tcl+GpuStr.cu  Tcl+GpuUtil.cu  Tcl+Hash.cu  Tcl+Hash.h  Tcl+History.cu  Tcl+Int.h  Tcl+Load-noop.cu  Tcl+Load.cu  Tcl+Load.h  Tcl+Obj.cu  Tcl+Parse.cu  Tcl+Proc.cu  Tcl+Unix.h  Tcl+UnixAZ.cu  Tcl+UnixEnv.cu  Tcl+UnixStr.cu  Tcl+UnixUtil.cu  Tcl+Util.cu  Tcl+Var.cu  Tcl+Win.h  Tcl+WinAZ.cu  Tcl+WinEnv.cu  Tcl+WinStr.cu  Tcl+WinUtil.cu  TclEx+Dbg.cu  (+36 more)
src/sqlite3/: alter.cpp  alter.cu  analyze.cpp  attach.cu  auth.cu  backup.cpp  backup.cu  bitvec.cpp  btree.cpp  btree.cu  btree.h  build.cpp  build.cu  callback.cpp  complete.cpp  date.cpp  delete.cpp  expr.cu  func.cu  hash.h  insert.cpp  json1.cpp  legacy.cu  libcu.h  loadext.cu  main.cpp  malloc.cu  mem2.cpp  mem3.cpp  mem5.cu  memjournal.cpp  mutex_w32.c  opcodes.cpp  os.h  os_win.c  os_win.cpp  pager.cpp  pager.h  parse.h  pcache.h  (+36 more)
src/tinytcl/: Libcu-TinyTcl.Native.nuspec  tinysh.cu  tinytcl.vcxproj  tinytcl.vcxproj.filters
(+163 files in other folders)
